@@ -9,6 +9,7 @@ Mejorado ZX Vision:
 
 Mejorado Debug CPU:
 - Mostrar número de vista dentro de la ventana en vez de en el título de la ventana
+- Agregar opción para activar/desactivar todos los breakpoints
 
 ----
 
